--- a/.github/ISSUE_TEMPLATE/------------.md
+++ b/.github/ISSUE_TEMPLATE/------------.md
@@ -10,8 +10,8 @@ assignees: ''
 ### 이슈 제목
 
 ### 이슈 상세
-- [ ] TodoList #1
-- [ ] TodoList #2
+- [ ] TodoList 1
+- [ ] TodoList 2
 
-1. TodoList #1
-2. TodoList #2
+1. TodoList 1
+2. TodoList 2
